# EnergyEfficientAirComputing

./: .coverage  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
Code/: Application.py  DDQN.py  DQN.py  DRL.py  Energy.py  Event.py  Location.py  Mobility.py  Plots.py  README.md  Scenario.py  Server.py  User.py  main.py  requirements.txt
aircompsim/: __init__.py  __main__.py  cli.py
aircompsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aircompsim/config/: __init__.py  defaults.yaml  loader.py  settings.py
aircompsim/core/: __init__.py  event.py  simulation.py
aircompsim/drl/: __init__.py  actor_critic.py  base.py  ddqn.py  dqn.py  replay_buffer.py
aircompsim/energy/: __init__.py  battery.py  charging.py  models.py  scheduler.py
aircompsim/entities/: __init__.py  location.py  server.py  task.py  user.py
aircompsim/mobility/: __init__.py
aircompsim/visualization/: __init__.py
docs/: architecture.md
results/: advanced_benchmark_report.json  advanced_benchmark_report.md  benchmark_report.json  benchmark_report.md
scripts/: advanced_benchmark.py  benchmark.py  generate_charts.py  generate_pdf.py
tests/: conftest.py
tests/integration/: test_cli.py  test_determinism.py  test_simulation.py
tests/unit/: test_battery.py  test_charging.py  test_drl.py  test_energy.py  test_loader.py  test_location.py  test_scheduler.py  test_simulation.py  test_user.py
